--- a/templates/nginx-backend.conf
+++ b/templates/nginx-backend.conf
@@ -1,12 +1,16 @@
 server {
-  listen 80;
-  server_name _;
+    listen 80;
+    server_name _;
 
-  location /api/service1 {
-    proxy_pass http://127.0.0.1:3001;
-  }
+    location /api/project1 {
+        proxy_pass http://127.0.0.1:3001;
+    }
 
-  location /api/service2 {
-    proxy_pass http://127.0.0.1:3002;
-  }
+    location /api/project2 {
+        proxy_pass http://127.0.0.1:3002;
+    }
+
+    location /api/project3 {
+        proxy_pass http://127.0.0.1:3003;
+    }
 }
