feat: :white_check_mark: frist frontend prototype

--- a/templates/nginx-frontend.conf
+++ b/templates/nginx-frontend.conf
@@ -1,14 +1,18 @@
-server {
-  listen 80;
-  server_name _;
+events {
+  worker_connections 1024;
+}
 
-  location /project1 {
-    root /var/www/html/project1;
-    index index.html;
-  }
+http {
+  include       mime.types;
+  default_type  application/octet-stream;
 
-  location /project2 {
-    root /var/www/html/project2;
-    index index.html;
+  server {
+    listen 80;
+    server_name _;
+
+    location /avatar-maker {
+      root /var/www/html/avatar-maker;
+      index index.html;
+    }
   }
 }
