--- a/templates/nginx-frontend.conf
+++ b/templates/nginx-frontend.conf
@@ -3,14 +3,14 @@ events {
 }
 
 http {
-  include       mime.types;
-  default_type  application/octet-stream;
+  include mime.types;
+  default_type application/octet-stream;
 
   server {
     listen 80;
     server_name _;
 
-    location /avatar-maker {
+    location / {
       root /var/www/html/avatar-maker;
       index index.html;
     }
