feat(services): :boom: fe-react-portfolio service

--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -6,83 +6,87 @@ pid /run/nginx.pid;
 include /usr/share/nginx/modules/*.conf;
 
 events {
-    worker_connections 1024;
+  worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-    sendfile        on;
-    keepalive_timeout  65;
+  sendfile on;
+  keepalive_timeout 65;
 
-    # Security headers
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header X-XSS-Protection "1; mode=block";
+  # Security headers
+  add_header X-Content-Type-Options nosniff;
+  add_header X-Frame-Options SAMEORIGIN;
+  add_header X-XSS-Protection "1; mode=block";
 
-    server {
-        listen 80;
-        server_name www.5h1ngy.click 5h1ngy.click;
+  server {
+    listen 80;
+    server_name www.5h1ngy-dev.click 5h1ngy-dev.click;
 
-        # Redirect HTTP to HTTPS
-        return 301 https://$host$request_uri;
+    # Redirect HTTP to HTTPS
+    return 301 https://$host$request_uri;
+  }
+
+  server {
+    listen 443 ssl;
+    server_name www.5h1ngy-dev.click 5h1ngy-dev.click;
+
+    # Root directory (default)
+    root /var/www/html;
+
+    # SSL configuration
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
+
+    # Enable directory listing (optional for debugging)
+    autoindex on;
+    autoindex_exact_size off;
+    autoindex_localtime on;
+
+    # Fallback for undefined routes
+    location / {
+      root /var/www/html/fe-react-portfolio;
+      index index.html;
+
+      # Serve file esistenti, fallback all'app React SPA
+      try_files $uri /index.html;
     }
 
-    server {
-        listen 443 ssl;
-        server_name www.5h1ngy.click 5h1ngy.click;
-
-        # Root directory (default)
-        root /var/www/html;
-
-        # SSL configuration
-        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
-
-        # Enable directory listing (optional for debugging)
-        autoindex on;
-        autoindex_exact_size off;
-        autoindex_localtime on;
-
-        # Routes to specific files
-        location /fe-react-avatar-maker {
-          root /var/www/html;
-          index index.html;
-          try_files $uri /fe-react-avatar-maker/index.html;
-        }
-
-        location /fe-react-anime-watch {
-          root /var/www/html;
-          index index.html;
-          try_files $uri /fe-react-anime-watch/index.html;
-        }
-
-        location /storybook/fe-react-avatar-maker {
-          root /var/www/html;
-          index index.html;
-          try_files $uri /storybook/fe-react-avatar-maker/index.html;
-        }
-
-        location /storybook/fe-react-anime-watch {
-          root /var/www/html;
-          index index.html;
-          try_files $uri /storybook/fe-react-anime-watch/index.html;
-        }
-
-        # Fallback for undefined routes
-        location / {
-            try_files $uri /index.html;
-        }
-
-        # Log settings
-        access_log /var/log/nginx/ssl_access.log;
-        error_log /var/log/nginx/ssl_error.log;
-
-        # Additional headers for security
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    # Routes to specific files
+    location /fe-react-avatar-maker {
+      root /var/www/html;
+      index index.html;
+      try_files $uri/ /fe-react-avatar-maker/index.html;
     }
+
+    location /fe-react-anime-watch {
+      root /var/www/html;
+      index index.html;
+      try_files $uri /fe-react-anime-watch/index.html;
+    }
+
+    location /storybook/fe-react-avatar-maker {
+      root /var/www/html;
+      index index.html;
+      try_files $uri /storybook/fe-react-avatar-maker/index.html;
+    }
+
+    location /storybook/fe-react-anime-watch {
+      root /var/www/html;
+      index index.html;
+      try_files $uri /storybook/fe-react-anime-watch/index.html;
+    }
+
+    # Log settings
+    access_log /var/log/nginx/ssl_access.log;
+    error_log /var/log/nginx/ssl_error.log;
+
+    # Additional headers for security
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+  }
 }
