--- a/terraform/data/templates/docker-compose-frontend.yml
+++ b/terraform/data/templates/docker-compose-frontend.yml
@@ -5,8 +5,8 @@ services:
     image: nginx:latest
     container_name: nginx_frontend
     volumes:
-      - ./ssl/nginx-selfsigned.crt:/etc/nginx/ssl/nginx-selfsigned.crt # :ro
-      - ./ssl/nginx-selfsigned.key:/etc/nginx/ssl/nginx-selfsigned.key # :ro
+      - ./ssl/certificate.crt:/etc/nginx/ssl/certificate.crt # :ro
+      - ./ssl/private.key:/etc/nginx/ssl/private.key # :ro
       - ./nginx/nginx-frontend.conf:/etc/nginx/nginx.conf # :ro # Config personalizzata per Nginx
       - ./services/frontend:/var/www/html/ # :ro # Mount del pacchetto frontend
       - ./services/frontend/logs:/var/log/nginx/ # :rw
