--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -57,6 +57,20 @@ http {
       try_files $uri /index.html;
     }
 
+    # Reverse proxy for /api/github
+    location /api/github {
+      proxy_pass https://localhost:3000; # URL del backend GitHub API
+      proxy_set_header Host localhost:3000;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # Timeout configurazioni
+      proxy_connect_timeout 60s;
+      proxy_read_timeout 60s;
+      proxy_send_timeout 60s;
+    }
+
     # Routes to specific files
     location /fe-react-avatar-maker {
       root /var/www/html;
