--- a/terraform/data/templates/nginx-backend.conf
+++ b/terraform/data/templates/nginx-backend.conf
@@ -1,16 +1,53 @@
-server {
-    listen 80;
-    server_name _;
+user nginx;
+worker_processes auto;
+pid /run/nginx.pid;
 
-    location /api/project1 {
-        proxy_pass http://127.0.0.1:3001;
-    }
+# Load modules dynamically.
+include /usr/share/nginx/modules/*.conf;
 
-    location /api/project2 {
-        proxy_pass http://127.0.0.1:3002;
-    }
+events {
+    worker_connections 1024;
+}
 
-    location /api/project3 {
-        proxy_pass http://127.0.0.1:3003;
+http {
+    server {
+        listen 80;
+        listen 443 ssl;
+
+        ssl_certificate /etc/nginx/ssl/certificate.crt;
+        ssl_certificate_key /etc/nginx/ssl/private.key;
+
+        # Reindirizza HTTP a HTTPS
+        if ($scheme = http) {
+            return 301 https://$host$request_uri;
+        }
+
+        # Reverse Proxy per il backend
+        location /api/be-node-portfolio {
+            proxy_pass https://be-node-portfolio-service:3000/api/github; # Backend in HTTPS
+            proxy_ssl_verify off; # Disabilita la verifica del certificato
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Timeout e gestione degli errori
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
+            send_timeout 60s;
+        }
+
+        # Gestione fallback per richieste non valide
+        location / {
+            return 404;
+        }
+
+        # Log settings
+        access_log /var/log/nginx/ssl_access.log;
+        error_log /var/log/nginx/ssl_error.log;
+
+        # Additional headers for security
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     }
 }
