--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -57,18 +57,18 @@ http {
       try_files $uri /index.html;
     }
 
-    # Reverse proxy for /api/github
     location /api/github {
-      proxy_pass https://localhost:3000; # URL del backend GitHub API
-      proxy_set_header Host localhost:3000;
+      proxy_pass https://<BACKEND_IP>/api/be-node-portfolio;
+      proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
 
-      # Timeout configurazioni
+      # Timeout e gestione degli errori
       proxy_connect_timeout 60s;
       proxy_read_timeout 60s;
       proxy_send_timeout 60s;
+      send_timeout 60s;
     }
 
     # Routes to specific files
