feat(services): :sparkles: portfolio api and servics be, fe, docs

--- a/terraform/data/templates/nginx-backend.conf
+++ b/terraform/data/templates/nginx-backend.conf
@@ -24,7 +24,7 @@ http {
 
         # Reverse Proxy per il backend
         location /api/be-node-portfolio {
-            proxy_pass https://be-node-portfolio-service:3000/api/github; # Backend in HTTPS
+            proxy_pass https://be-node-portfolio-service:3000/api/be-node-portfolio; # Backend in HTTPS
             proxy_ssl_verify off; # Disabilita la verifica del certificato
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
