--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -57,7 +57,7 @@ http {
       try_files $uri /index.html;
     }
 
-    location /api/github {
+    location /api/be-node-portfolio {
       proxy_pass https://<BACKEND_IP>/api/be-node-portfolio;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -69,6 +69,13 @@ http {
       proxy_read_timeout 60s;
       proxy_send_timeout 60s;
       send_timeout 60s;
+    }
+
+    # Routes to specific files
+    location /docs/be-node-portfolio {
+      root /var/www/html;
+      index index.html;
+      try_files $uri/ /docs/be-node-portfolio/index.html;
     }
 
     # Routes to specific files
