--- a/terraform/data/templates/docker-compose-backend.yml
+++ b/terraform/data/templates/docker-compose-backend.yml
@@ -34,7 +34,7 @@ services:
     ports:
       - "8080:3000"
     entrypoint: >
-      sh -c "apk add --no-cache iputils curl && yarn start"
+      sh -c "apk add --no-cache iputils curl && yarn start:prod"
     restart: always
 
 networks:
