fix(services): :zap: fe docs be fix

--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -72,10 +72,10 @@ http {
     }
 
     # Routes to specific files
-    location /docs/be-node-portfolio {
-      root /var/www/html;
+    location /docs/be-node-portfolio/ {
+      alias /var/www/html/docs/be-node-portfolio/;
       index index.html;
-      try_files $uri/ /docs/be-node-portfolio/index.html;
+      try_files $uri $uri/ /index.html;
     }
 
     # Routes to specific files
