feat(services): :fire: storybook and docs with swagger

--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -1,62 +1,84 @@
-user nginx;
-worker_processes auto;
-pid /run/nginx.pid;
+###############################################################################
+#                                   BASE CONFIG
+###############################################################################
+user nginx; # Utente sotto cui girano i processi Nginx
+worker_processes auto; # Numero di processi: 'auto' adatta ai core CPU
+pid /run/nginx.pid; # Percorso del file PID di Nginx
 
-# Load modules dynamically.
+# Caricamento dei moduli Nginx in modo dinamico
 include /usr/share/nginx/modules/*.conf;
 
+###############################################################################
+#                                   EVENTS
+###############################################################################
 events {
-  worker_connections 1024;
+  worker_connections 1024; # Numero massimo di connessioni per worker
 }
 
+###############################################################################
+#                                   HTTP
+###############################################################################
 http {
+  # Includo i mime.types standard
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
 
+  # Abilito l'invio veloce di file
   sendfile on;
   keepalive_timeout 65;
 
-  # Security headers
+  # Security headers di base
   add_header X-Content-Type-Options nosniff;
   add_header X-Frame-Options SAMEORIGIN;
   add_header X-XSS-Protection "1; mode=block";
 
+  #############################################################################
+  #                          HTTP -> HTTPS REDIRECT SERVER
+  #############################################################################
   server {
-    listen 80;
+    listen 80; # Ascolta la porta 80 (HTTP)
     server_name www.5h1ngy-dev.click 5h1ngy-dev.click;
 
-    # Redirect HTTP to HTTPS
+    # Reindirizza tutto il traffico HTTP verso HTTPS
     return 301 https://$host$request_uri;
   }
 
+  #############################################################################
+  #                               MAIN HTTPS SERVER
+  #############################################################################
   server {
-    listen 443 ssl;
+    listen 443 ssl; # Ascolta la porta 443 (HTTPS)
     server_name www.5h1ngy-dev.click 5h1ngy-dev.click;
 
-    # Root directory (default)
+    # Imposta la directory root di default
     root /var/www/html;
 
-    # SSL configuration
+    # Configurazione SSL
     ssl_certificate /etc/nginx/ssl/certificate.crt;
     ssl_certificate_key /etc/nginx/ssl/private.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
 
-    # Enable directory listing (optional for debugging)
+    # Directory listing (opzionale per debugging)
     autoindex on;
     autoindex_exact_size off;
     autoindex_localtime on;
 
-    # Fallback for undefined routes
+    #---------------------------------------------------------------------------
+    #                Fallback per le route non definite (React SPA)
+    #---------------------------------------------------------------------------
     location / {
-      root /var/www/html/fe-react-portfolio;
-      index index.html;
+      root /var/www/html/fe-react-portfolio; # Root specifica per la React SPA
+      index index.html; # File di indice di default
 
-      # Serve file esistenti, fallback all'app React SPA
+      # Serve il file se esiste, altrimenti fallback all'index.html della SPA
       try_files $uri /index.html;
     }
 
+    #---------------------------------------------------------------------------
+    #                  LOCATION PER L'API /api/be-node-portfolio
+    #---------------------------------------------------------------------------
     location /api/be-node-portfolio {
       proxy_pass https://<BACKEND_IP>/api/be-node-portfolio;
       proxy_set_header Host $host;
@@ -71,14 +93,38 @@ http {
       send_timeout 60s;
     }
 
-    # Routes to specific files
+    #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /docs/be-node-portfolio
+    #---------------------------------------------------------------------------
+    # Se l'utente va su /docs/be-node-portfolio SENZA slash finale -> 301
+    location = /docs/be-node-portfolio {
+      return 301 /docs/be-node-portfolio/;
+    }
+
+    # Se l'utente va su /docs/be-node-portfolio/ CON slash finale
     location /docs/be-node-portfolio/ {
       alias /var/www/html/docs/be-node-portfolio/;
       index index.html;
       try_files $uri $uri/ /index.html;
     }
 
-    # Routes to specific files
+    #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /storybook/be-node-portfolio
+    #---------------------------------------------------------------------------
+    location = /storybook/be-node-portfolio {
+      return 301 /storybook/be-node-portfolio/;
+    }
+
+    # Se l'utente va su /storybook/be-node-portfolio/ CON slash finale
+    location /storybook/be-node-portfolio/ {
+      alias /var/www/html/storybook/be-node-portfolio/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
+    #         ALTRE LOCATION PER PROGETTI REACT E STORYBOOK
+    #---------------------------------------------------------------------------
     location /fe-react-avatar-maker {
       root /var/www/html;
       index index.html;
@@ -103,11 +149,14 @@ http {
       try_files $uri /storybook/fe-react-anime-watch/index.html;
     }
 
-    # Log settings
+    #---------------------------------------------------------------------------
+    #                 LOG E SECURITY HEADER ADDIZIONALI
+    #---------------------------------------------------------------------------
+    # Log di accesso ed errori (SSL)
     access_log /var/log/nginx/ssl_access.log;
     error_log /var/log/nginx/ssl_error.log;
 
-    # Additional headers for security
+    # HTTP Strict Transport Security (HSTS)
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
   }
 }
