--- a/terraform/data/templates/nginx-backend.conf
+++ b/terraform/data/templates/nginx-backend.conf
@@ -38,6 +38,22 @@ http {
             send_timeout 60s;
         }
 
+        # Reverse Proxy per il backend
+        location /api/be-node-anime-watch {
+            proxy_pass https://be-node-anime-watch-service:3000/api/be-node-anime-watch; # Backend in HTTPS
+            proxy_ssl_verify off; # Disabilita la verifica del certificato
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Timeout e gestione degli errori
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
+            send_timeout 60s;
+        }
+
         # Gestione fallback per richieste non valide
         location / {
             return 404;
