--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -94,6 +94,23 @@ http {
     }
 
     #---------------------------------------------------------------------------
+    #                  LOCATION PER L'API /api/be-node-anime-watch
+    #---------------------------------------------------------------------------
+    location /api/be-node-anime-watch {
+      proxy_pass https://<BACKEND_IP>/api/be-node-anime-watch;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # Timeout e gestione degli errori
+      proxy_connect_timeout 60s;
+      proxy_read_timeout 60s;
+      proxy_send_timeout 60s;
+      send_timeout 60s;
+    }
+
+    #---------------------------------------------------------------------------
     #                  REDIRECT E LOCATION PER /docs/be-node-portfolio
     #---------------------------------------------------------------------------
     # Se l'utente va su /docs/be-node-portfolio SENZA slash finale -> 301
@@ -109,44 +126,60 @@ http {
     }
 
     #---------------------------------------------------------------------------
-    #                  REDIRECT E LOCATION PER /storybook/be-node-portfolio
+    #                  REDIRECT E LOCATION PER /docs/be-node-animewatch
     #---------------------------------------------------------------------------
-    location = /storybook/be-node-portfolio {
-      return 301 /storybook/be-node-portfolio/;
+    # Se l'utente va su /docs/be-node-animewatch SENZA slash finale -> 301
+    location = /docs/be-node-animewatch {
+      return 301 /docs/be-node-animewatch/;
     }
 
-    # Se l'utente va su /storybook/be-node-portfolio/ CON slash finale
-    location /storybook/be-node-portfolio/ {
-      alias /var/www/html/storybook/be-node-portfolio/;
+    # Se l'utente va su /docs/be-node-animewatch/ CON slash finale
+    location /docs/be-node-animewatch/ {
+      alias /var/www/html/docs/be-node-animewatch/;
       index index.html;
       try_files $uri $uri/ /index.html;
     }
 
     #---------------------------------------------------------------------------
-    #         ALTRE LOCATION PER PROGETTI REACT E STORYBOOK
+    #                  REDIRECT E LOCATION PER /storybook/fe-react-portfolio
     #---------------------------------------------------------------------------
-    location /fe-react-avatar-maker {
-      root /var/www/html;
-      index index.html;
-      try_files $uri/ /fe-react-avatar-maker/index.html;
+    location = /storybook/fe-react-portfolio {
+      return 301 /storybook/fe-react-portfolio/;
     }
 
-    location /fe-react-anime-watch {
-      root /var/www/html;
+    # Se l'utente va su /storybook/fe-react-portfolio/ CON slash finale
+    location /storybook/fe-react-portfolio/ {
+      alias /var/www/html/storybook/fe-react-portfolio/;
       index index.html;
-      try_files $uri /fe-react-anime-watch/index.html;
+      try_files $uri $uri/ /index.html;
     }
 
-    location /storybook/fe-react-avatar-maker {
-      root /var/www/html;
-      index index.html;
-      try_files $uri /storybook/fe-react-avatar-maker/index.html;
+    #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /projects/fe-react-anime-watch
+    #---------------------------------------------------------------------------
+    location = /projects/fe-react-anime-watch {
+      return 301 /projects/fe-react-anime-watch/;
     }
 
-    location /storybook/fe-react-anime-watch {
-      root /var/www/html;
+    # Se l'utente va su /projects/fe-react-anime-watch/ CON slash finale
+    location /projects/fe-react-anime-watch/ {
+      alias /var/www/html/projects/fe-react-anime-watch/;
       index index.html;
-      try_files $uri /storybook/fe-react-anime-watch/index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /storybook/fe-react-anime-watch
+    #---------------------------------------------------------------------------
+    location = /storybook/fe-react-anime-watch {
+      return 301 /storybook/fe-react-anime-watch/;
+    }
+
+    # Se l'utente va su /storybook/fe-react-anime-watch/ CON slash finale
+    location /storybook/fe-react-anime-watch/ {
+      alias /var/www/html/storybook/fe-react-anime-watch/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
     }
 
     #---------------------------------------------------------------------------
