fix(services): :zap: po-nfs and be ports

--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -183,6 +183,20 @@ http {
     }
 
     #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /projects/fe-react-poc-nfs
+    #---------------------------------------------------------------------------
+    location = /projects/fe-react-poc-nfs {
+      return 301 /projects/fe-react-poc-nfs/;
+    }
+
+    # Se l'utente va su /projects/fe-react-poc-nfs/ CON slash finale
+    location /projects/fe-react-poc-nfs/ {
+      alias /var/www/html/projects/fe-react-poc-nfs/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
     #                 LOG E SECURITY HEADER ADDIZIONALI
     #---------------------------------------------------------------------------
     # Log di accesso ed errori (SSL)
