--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -126,16 +126,16 @@ http {
     }
 
     #---------------------------------------------------------------------------
-    #                  REDIRECT E LOCATION PER /docs/be-node-animewatch
+    #                  REDIRECT E LOCATION PER /docs/be-node-anime-watch
     #---------------------------------------------------------------------------
-    # Se l'utente va su /docs/be-node-animewatch SENZA slash finale -> 301
-    location = /docs/be-node-animewatch {
-      return 301 /docs/be-node-animewatch/;
+    # Se l'utente va su /docs/be-node-anime-watch SENZA slash finale -> 301
+    location = /docs/be-node-anime-watch {
+      return 301 /docs/be-node-anime-watch/;
     }
 
-    # Se l'utente va su /docs/be-node-animewatch/ CON slash finale
-    location /docs/be-node-animewatch/ {
-      alias /var/www/html/docs/be-node-animewatch/;
+    # Se l'utente va su /docs/be-node-anime-watch/ CON slash finale
+    location /docs/be-node-anime-watch/ {
+      alias /var/www/html/docs/be-node-anime-watch/;
       index index.html;
       try_files $uri $uri/ /index.html;
     }
@@ -164,6 +164,20 @@ http {
     # Se l'utente va su /projects/fe-react-anime-watch/ CON slash finale
     location /projects/fe-react-anime-watch/ {
       alias /var/www/html/projects/fe-react-anime-watch/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /projects/fe-react-avatar-maker
+    #---------------------------------------------------------------------------
+    location = /projects/fe-react-avatar-maker {
+      return 301 /projects/fe-react-avatar-maker/;
+    }
+
+    # Se l'utente va su /projects/fe-react-avatar-maker/ CON slash finale
+    location /projects/fe-react-avatar-maker/ {
+      alias /var/www/html/projects/fe-react-avatar-maker/;
       index index.html;
       try_files $uri $uri/ /index.html;
     }
