--- a/terraform/data/templates/Dockerfile-backend.yml
+++ b/terraform/data/templates/Dockerfile-backend.yml
@@ -1,6 +1,10 @@
 # Usa l'immagine Node.js come base
 FROM node:20-alpine
 
+# Installa pacchetti necessari per compilare moduli nativi
+RUN apk add --no-cache iputils curl 
+RUN apk add --no-cache python3 make g++ bash
+
 # Abilita Yarn tramite Corepack
 RUN corepack enable
 
