feat(services): :ambulance: videogame project

--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -211,6 +211,35 @@ http {
     }
 
     #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /projects/fe-phaser-poc-isometric-rpg
+    #---------------------------------------------------------------------------
+    location = /projects/fe-phaser-poc-isometric-rpg {
+      return 301 /projects/fe-phaser-poc-isometric-rpg/;
+    }
+
+    # Se l'utente va su /projects/fe-phaser-poc-isometric-rpg/ CON slash finale
+    location /projects/fe-phaser-poc-isometric-rpg/ {
+      alias /var/www/html/projects/fe-phaser-poc-isometric-rpg/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /docs/fe-phaser-poc-isometric-rpg
+    #---------------------------------------------------------------------------
+    # Se l'utente va su /docs/fe-phaser-poc-isometric-rpg SENZA slash finale -> 301
+    location = /docs/fe-phaser-poc-isometric-rpg {
+      return 301 /docs/fe-phaser-poc-isometric-rpg/;
+    }
+
+    # Se l'utente va su /docs/fe-phaser-poc-isometric-rpg/ CON slash finale
+    location /docs/fe-phaser-poc-isometric-rpg/ {
+      alias /var/www/html/docs/fe-phaser-poc-isometric-rpg/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
     #                 LOG E SECURITY HEADER ADDIZIONALI
     #---------------------------------------------------------------------------
     # Log di accesso ed errori (SSL)
