feat(services): :fire: fe-phaser-season-times

--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -225,6 +225,20 @@ http {
     }
 
     #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /projects/fe-phaser-season-times
+    #---------------------------------------------------------------------------
+    location = /projects/fe-phaser-season-times {
+      return 301 /projects/fe-phaser-season-times/;
+    }
+
+    # Se l'utente va su /projects/fe-phaser-season-times/ CON slash finale
+    location /projects/fe-phaser-season-times/ {
+      alias /var/www/html/projects/fe-phaser-season-times/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
     #                  REDIRECT E LOCATION PER /docs/fe-phaser-poc-isometric-rpg
     #---------------------------------------------------------------------------
     # Se l'utente va su /docs/fe-phaser-poc-isometric-rpg SENZA slash finale -> 301
@@ -235,6 +249,21 @@ http {
     # Se l'utente va su /docs/fe-phaser-poc-isometric-rpg/ CON slash finale
     location /docs/fe-phaser-poc-isometric-rpg/ {
       alias /var/www/html/docs/fe-phaser-poc-isometric-rpg/;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    #---------------------------------------------------------------------------
+    #                  REDIRECT E LOCATION PER /docs/fe-phaser-season-times
+    #---------------------------------------------------------------------------
+    # Se l'utente va su /docs/fe-phaser-season-times SENZA slash finale -> 301
+    location = /docs/fe-phaser-season-times {
+      return 301 /docs/fe-phaser-season-times/;
+    }
+
+    # Se l'utente va su /docs/fe-phaser-season-times/ CON slash finale
+    location /docs/fe-phaser-season-times/ {
+      alias /var/www/html/docs/fe-phaser-season-times/;
       index index.html;
       try_files $uri $uri/ /index.html;
     }
