feat: 🎨 domain update

--- a/terraform/data/templates/nginx-frontend.conf
+++ b/terraform/data/templates/nginx-frontend.conf
@@ -37,7 +37,7 @@ http {
   #############################################################################
   server {
     listen 80; # Ascolta la porta 80 (HTTP)
-    server_name www.5h1ngy-dev.click 5h1ngy-dev.click;
+    server_name www.5h1ngy.click 5h1ngy.click;
 
     # Reindirizza tutto il traffico HTTP verso HTTPS
     return 301 https://$host$request_uri;
@@ -48,7 +48,7 @@ http {
   #############################################################################
   server {
     listen 443 ssl; # Ascolta la porta 443 (HTTPS)
-    server_name www.5h1ngy-dev.click 5h1ngy-dev.click;
+    server_name www.5h1ngy.click 5h1ngy.click;
 
     # Imposta la directory root di default
     root /var/www/html;
